# bouncezero-email-finder

./: .env.example  README.md  pyproject.toml  render.yaml
architecture/: MODULE_CONTRACTS.md  chosen_scope.json  final_architecture.json  verify_findings.json
audit_analysis/: analyze_audit.py  environment_constraints.md  summary.md
emailfinder/: __init__.py  __main__.py  batch.py  cache.py  candidates.py  cli.py  compliance.py  config.py  dns_mx.py  dsn.py  engine.py  errors.py  filters.py  kb_store.py  models.py  names.py  normalize.py  provider.py  ranking.py  rescore.py  scoring.py  shapes.py  smtp_probe.py  templates.py  web.py
emailfinder/data/: disposable_domains.json  global_priors.json  nicknames.json  provider_map.json  role_locals.json  webmail_domains.json
emailfinder/providers/: __init__.py  anymailfinder.py  base.py  hunter.py  millionverifier.py  registry.py
research/: RESEARCH_DOSSIER.md  verified_findings.json
scripts/: acceptance.py  deploy_render.py
tests/: conftest.py  test_batch.py  test_cache.py  test_cli.py  test_compliance.py  test_dns_mx.py  test_dsn.py  test_engine.py  test_filters.py  test_kb_store.py  test_names.py  test_normalize.py  test_provider.py  test_providers.py  test_rescore.py  test_scoring.py  test_smtp_probe.py  test_templates_candidates.py  test_verify_regressions.py  test_web.py  test_webapp.py
tests/fixtures/: sample_bounces.csv  sample_kb.json
webapp/: CONTRACT.md  DEPLOY.md  app.py  page.py  service.py  store.py  store_pg.py
